--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
     "name": "hardhat-starter-kit-typescript",
     "version": "1.0.0",
+    "author": {
+        "name": "Mehedi Hasan",
+        "email": "mehedi.iitdu@gmail.com",
+        "url": "https://www.linkedin.com/in/md-mehedi-hasan-140116133/"
+    },
     "description": "This is a boilerplate for hardhat smart contract projects using typescript",
     "devDependencies": {
         "@chainlink/contracts": "^0.4.1",
